--- a/src/Cliente/app/src/main/AndroidManifest.xml
+++ b/src/Cliente/app/src/main/AndroidManifest.xml
@@ -25,6 +25,11 @@
 
         <service android:name="org.eclipse.paho.android.service.MqttService" />
 
+        <service
+            android:name=".servico.MqttServico"
+            android:enabled="true"
+            android:exported="true" />
+
     </application>
 
 </manifest>
